--- a/user-config.example.json
+++ b/user-config.example.json
@@ -1,11 +1,11 @@
 [{
-    "username": "hukuuu@gmail.com",
-    "password": "***",
-    "sessions": ["1 8 0", "2 19 30", "4 19 30"],
-    "multisport":true
+  "username": "hukuuu@gmail.com",
+  "password": "***",
+  "sessions": ["1 8 0", "2 19 30", "4 19 30", "6 10 15"],
+  "multisport": true
 }, {
-    "username": "spirovska.alexandra@gmail.com",
-    "password": "***",
-    "sessions": ["2 19 30", "4 19 30"],
-    "multisport": false
+  "username": "spirovska.alexandra@gmail.com",
+  "password": "***",
+  "sessions": ["2 19 30", "4 19 30"],
+  "multisport": false
 }]
